// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconPlusThin should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-plus-thin "
  height={9}
  viewBox="0 0 9 9"
  width={9}
>
  <path
    className="fill-color"
    d="M5 4V0H4v4H0v1h4v4h1V5h4V4H5z"
    fill="#222"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPlusThin should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-plus-thin test"
  height={100}
  title="title"
  viewBox="0 0 9 9"
  width={200}
>
  <path
    className="fill-color"
    d="M5 4V0H4v4H0v1h4v4h1V5h4V4H5z"
    fill="#444"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;
